2003-07-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_load_media): change the "Install..." to
	"Please install...", tell the type of media that the user tried to play
	in the error message (Closes: #118658)

2003-07-30  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in: added window_w and window_h entries
	* src/bacon-video-widget-xine.c: (bacon_video_widget_new),
	(bacon_video_widget_size_allocate): fix first widget size allocation
	when a widget size has been given specifically
	* src/totem.c: (totem_action_fullscreen_toggle),
	(totem_setup_window), (video_widget_create), (main): save and restore
	the size of the video widget across sessions (Closes: #118526)

2003-07-30  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in: added "window_on_top" item, updated docs
	for the audio output
	* src/totem-preferences.c: (totem_setup_preferences):
	* src/totem.c: (gui_update_cb), (on_always_on_top1_activate),
	(popup_hide), (on_video_button_press_event),
	(totem_action_handle_key), (totem_callback_connect),
	(totem_setup_recent): remember the "Always On Top" setting across
	sessions (Closes: #114162)

2003-07-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-resize.c: (bacon_resize_init): disable xrandr's
	automatic resize, it's broken :/
	* src/totem.c: (totem_action_exit): switch off fullscreen in the
	video widget before exiting

2003-07-29  Bastien Nocera  <hadess@hadess.net>

	* README: removed TODO item
	* src/totem-playlist.c: (totem_playlist_add_directory): implement
	recursive directory loading (Closes: #118516)

2003-07-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (main): call nice() before
	initialising threads to make glib shut up, check that there is a
	GError coming out of bacon_video_widget_can_get_frames before
	printing it (Closes: #118587)

2003-07-29  Bastien Nocera  <hadess@hadess.net>

	* README: removed TODO item