@@ -10,7 +10,7 @@
 	<locale name="C">
 	  <short>Show visual effects when no video is displayed</short>
 	  <long>
-	    Show visual effects when playing an audio only file
+	    Show visual effects when playing an audio only file.
 	  </long>
 	</locale>
       </schema>
@@ -23,7 +23,7 @@
 	<default>goom</default>
 	<locale name="C">
 	  <short>Name of the visual effects plugins</short>
-	  <long>Name of the visual effects plugins</long>
+	  <long>Name of the visual effects plugins.</long>
 	</locale>
       </schema>
 
@@ -35,7 +35,7 @@
 	<default>32767</default>
 	<locale name="C">
 	  <short>The brightness of the video</short>
-	  <long>The brightness of the video</long>
+	  <long>The brightness of the video.</long
 	</locale>
       </schema>
 
@@ -47,7 +47,7 @@
 	<default>32767</default>
 	<locale name="C">
 	  <short>The contrast of the video</short>
-	  <long>The contrast of the video</long>
+	  <long>The contrast of the video.</long>
 	</locale>
       </schema>
 
@@ -59,7 +59,7 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Resize the canvas automatically on file load</short>
-	  <long>Resize the canvas automatically on file load</long>
+	  <long>Resize the canvas automatically on file load.</long>
 	</locale>
       </schema>
 
@@ -71,7 +71,7 @@
 	<default>auto</default>
 	<locale name="C">
 	  <short>Path to the optical media device</short>
-	  <long>Path to the optical media device</long>
+	  <long>Path to the optical media device.</long>
 	</locale>
       </schema>
 
@@ -83,7 +83,7 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Repeat mode</short>
-	  <long>Repeat mode</long>
+	  <long>Repeat mode.</long>
 	</locale>
       </schema>
 
@@ -95,7 +95,7 @@
 	<default>FALSE</default>
 	<locale name="C">
 	  <short>Enable deinterlacing</short>
-	  <long>Enable deinterlacing</long>
+	  <long>Enable deinterlacing.</long>
 	</locale>
       </schema>
 
@@ -107,7 +107,7 @@
 	<default>-1</default>
 	<locale name="C">
 	  <short>X coordinate for the Playlist</short>
-	  <long>X coordinate for the Playlist</long>
+	  <long>X coordinate for the Playlist.</long>
 	</locale>
       </schema>
 
@@ -119,7 +119,7 @@
 	<default>-1</default>
 	<locale name="C">
 	<short>Y coordinate for the Playlist</short>
-	<long>Y coordinate for the Playlist</long>
+	<long>Y coordinate for the Playlist.</long>
 	</locale>
       </schema>
 
@@ -131,7 +131,7 @@
 	<default>false</default>
 	<locale name="C">
 	  <short>Whether to enable debug for the playback engine</short>
-	  <long>Whether to enable debug for the playback engine</long>
+	  <long>Whether to enable debug for the playback engine.</long>
 	</locale>
       </schema>
 
