@@ -1,3 +1,8 @@
+2003-07-31  Bastien Nocera  <hadess@hadess.net>
+
+	* data/totem.schemas.in: add full stops at the end of the long
+	descriptions (Closes: #118710)
+
 2003-07-30  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c: (totem_action_load_media): change the "Install..." to
